Improve the separation between the Connect and MM2 operators (#9955)
Signed-off-by: Jakub Scholz <www@scholzj.com>
Signed-off-by: AvivGuiser <aviv.guiser@placer.ai>